--- a/Disease_Prediction.ipynb
+++ b/Disease_Prediction.ipynb
@@ -1,6 +1,16 @@
 {
   "cells": [
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "view-in-github",
+        "colab_type": "text"
+      },
+      "source": [
+        "<a href=\"https://colab.research.google.com/github/Praveen-dynamo/Disease-Prediction/blob/main/Disease_Prediction.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+      ]
+    },
+    {
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
@@ -797,7 +807,10 @@
   ],
   "metadata": {
     "colab": {
-      "provenance": []
+      "provenance": [],
+      "mount_file_id": "19Tiqodop_Aa-LbJwggeOFni2eQ7P6kSJ",
+      "authorship_tag": "ABX9TyN43OsqM+4ORQ+qoCLHEYtz",
+      "include_colab_link": true
     },
     "kernelspec": {
       "display_name": "Python 3",
